--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
-    "react-tagsinput": "^3.19.0"
+    "react-tagsinput": "^3.19.0",
+    "semver": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
